--- a/package.json
+++ b/package.json
@@ -10,10 +10,11 @@
     "css-reset-and-normalize": "^2.3.6",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-router-dom": "^7.7.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
-   "devDependencies": {
+  "devDependencies": {
     "babel-plugin-module-resolver": "^5.0.2",
     "customize-cra": "^1.0.0",
     "react-app-rewired": "^2.2.1",
@@ -43,5 +44,4 @@
       "last 1 safari version"
     ]
   }
- 
 }
