--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
     "@tippyjs/react": "^4.2.6",
+    "axios": "^1.11.0",
     "classnames": "^2.5.1",
     "css-reset-and-normalize": "^2.3.6",
     "react": "^19.1.0",
